# mio-ring

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
core/: Cargo.toml  build.rs
core/src/: identitier.rs  interpretation.rs  lib.rs  operation.rs  persistence.rs  security.rs
gui/: Cargo.toml
gui/src/: main.rs
ob/: Cargo.toml  build.rs  tray.rc
ob/icons/: cvt.sh  tray.icns
ob/src/: lib.rs  main.rs
observer/: Cargo.toml
observer/src/: lib.rs
ring/: Cargo.toml  Dioxus.toml
ring/src/: lib.rs  main.rs
src/: main.rs
ui/: main.slint
