[package]
name = "mio-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typetag = "0.2"
itertools = "0.11"
anyhow = "1.0"
directories-next = "2.0"
derive_more = "0.99"

image = { version = "0.24", optional = true }

[features]
default = ["image"]