[package]
name = "mio-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typetag = "0.2"
itertools = "0.11"
anyhow = "1.0"
directories-next = "2.0"
derive_more = "0.99"
tempfile = "3"

# clipboard-master = { version = "3.1.3", optional = true }

screenshots = { version = "0.7.2", optional = true }
clipboard = { version = "*", optional = true }

image = { version = "0.24", optional = true }
leptess = { version = "0.14", optional = true }

[features]
default = ["screenshot", "clipboard", "image", "ocr"]
screenshot = ["dep:screenshots"]
clipboard = ["dep:clipboard"]
image = ["dep:image"]
ocr = ["leptess"]
