[package]
name = "mio-core"
version = "0.1.0"
authors = ["LighghtEeloo <litiaeeloo@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typetag = "0.2"
itertools = "0.11"
anyhow = "1.0"
directories-next = "2.0"
derive_more = "0.99"
tempfile = "3"
log = "0.4"

screenshots = { version = "0.7", optional = true }
arboard = { version = "3.2", optional = true }

image = { version = "0.24", optional = true }
leptess = { version = "0.14", optional = true }

[build-dependencies]
ring = "0.16"

[features]
default = ["screenshot", "clipboard", "image", "ocr"]
screenshot = ["dep:screenshots"]
clipboard = ["dep:arboard"]
image = ["dep:image"]
ocr = ["leptess"]
