[package]
name = "mio-ob"
version = "0.1.0"
authors = ["LighghtEeloo <litiaeeloo@gmail.com>"]
edition = "2021"

[[bin]]
name = "mio-ob"
path = "src/bin/ob.rs"

[[bin]]
name = "mio-tray"
path = "src/bin/tray.rs"

[[bin]]
name = "miod"
path = "src/bin/daemon.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1"

tray-item = "0.8.0"
# clipboard-master = { version = "3.1.3", optional = true }

mio-core = { path = "../core" }

[build-dependencies]
windres = "*"
