[package]
name = "mio-ob"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
itertools = "0.11"
tempfile = "3"

screenshots = { version = "0.7.2", optional = true }
clipboard = { version = "*", optional = true }
clipboard-master = { version = "3.1.3", optional = true }

[features]
default = ["screenshot", "clipboard"]
screenshot = ["dep:screenshots"]
clipboard = ["dep:clipboard-master", "dep:clipboard"]
