[package]
name = "mio-ring"
version = "0.1.0"
authors = ["LighghtEeloo <litiaeeloo@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.4" }
dioxus-desktop = { version = "0.4", features = ["fullscreen", "tray"] }
dioxus-router = { version = "0.4" }
# clipboard-master = { version = "3.1.3", optional = true }

# Debug
log = "0.4"
dioxus-logger = "0.4"
