[package]
name = "mio-ring"
version = "0.1.0"
authors = ["LighghtEeloo <litiaeeloo@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.4" }
dioxus-desktop = { version = "0.4", features = ["fullscreen", "tray"] }
dioxus-router = { version = "0.4" }

log = "0.4"
dioxus-logger = "0.4"

mio-core = { path = "../core" }
